Fixed an overflow bug in the header.

--- a/public/stylesheets/episodelog.css
+++ b/public/stylesheets/episodelog.css
@@ -44,7 +44,8 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  margin: 10px 0;
+  margin: 0;
+  padding: 10px 0;
 }
 
 h2 {
@@ -101,7 +102,6 @@ table {
   position: relative;
   margin: 0 auto;
   height: 48px;
-  overflow: auto;
 }
 
 #header #logo {
